Hopefully fix sharex link overflow on certain domain lengths

--- a/src/app/views/cp/settings/sidebar/sidebar-partials/styles.scss
+++ b/src/app/views/cp/settings/sidebar/sidebar-partials/styles.scss
@@ -128,4 +128,14 @@
         text-transform: uppercase;
 
     }
+
+   @media(max-width: 420px) {
+    .tokenLinkContainer {
+        flex-direction: column;
+
+        button {
+            width: 100%;
+        }
+    }
+   }
 }
